--- a/public/about/index.html
+++ b/public/about/index.html
@@ -50,17 +50,17 @@ HA盒子，找我就行，包您满意，诚信经营。
     <link href="../about/index.xml" rel="alternate" type="application/rss+xml" title="5 关于我们 :: HaBox 技术支持站">
     <link href="../about/index.print.html" rel="alternate" type="text/html" title="5 关于我们 :: HaBox 技术支持站"><link rel="icon" href="../images/favicon.png" type="image/png">
 
-    <link href="../css/fontawesome-all.min.css?1734687493" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fontawesome-all.min.css?1734687493" rel="stylesheet"></noscript>
-    <link href="../css/nucleus.css?1734687493" rel="stylesheet">
-    <link href="../css/auto-complete.css?1734687493" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/auto-complete.css?1734687493" rel="stylesheet"></noscript>
-    <link href="../css/perfect-scrollbar.min.css?1734687493" rel="stylesheet">
-    <link href="../css/fonts.css?1734687493" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fonts.css?1734687493" rel="stylesheet"></noscript>
-    <link href="../css/theme.css?1734687493" rel="stylesheet">
-    <link href="../css/theme-relearn-auto.css?1734687493" rel="stylesheet" id="R-variant-style">
-    <link href="../css/chroma-relearn-auto.css?1734687493" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../css/variant.css?1734687493" rel="stylesheet">
-    <link href="../css/print.css?1734687493" rel="stylesheet" media="print">
-    <script src="../js/variant.js?1734687493"></script>
+    <link href="../css/fontawesome-all.min.css?1734743189" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fontawesome-all.min.css?1734743189" rel="stylesheet"></noscript>
+    <link href="../css/nucleus.css?1734743189" rel="stylesheet">
+    <link href="../css/auto-complete.css?1734743189" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/auto-complete.css?1734743189" rel="stylesheet"></noscript>
+    <link href="../css/perfect-scrollbar.min.css?1734743189" rel="stylesheet">
+    <link href="../css/fonts.css?1734743189" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fonts.css?1734743189" rel="stylesheet"></noscript>
+    <link href="../css/theme.css?1734743189" rel="stylesheet">
+    <link href="../css/theme-relearn-auto.css?1734743189" rel="stylesheet" id="R-variant-style">
+    <link href="../css/chroma-relearn-auto.css?1734743189" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../css/variant.css?1734743189" rel="stylesheet">
+    <link href="../css/print.css?1734743189" rel="stylesheet" media="print">
+    <script src="../js/variant.js?1734743189"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..';
@@ -127,13 +127,12 @@ HA盒子，找我就行，包您满意，诚信经营。
         </div>
       </nav>
       <div id="R-main-overlay"></div>
-      <main id="R-body-inner" class="highlightable chapter narrow" tabindex="-1">
+      <main id="R-body-inner" class="highlightable default" tabindex="-1">
         <div class="flex-block-wrapper">
 
-          <article class="chapter">
+          <article class="default">
             <header class="headline">
             </header>
-<div class="article-subheading">第1章</div>
 
 <h1 id="5-关于我们">5 关于我们</h1>
 
@@ -150,11 +149,11 @@ HA盒子，找我就行，包您满意，诚信经营。
 <h2 id="联系我们"><strong>联系我们</strong></h2>
 <p>【闲鱼】<a href="https://m.tb.cn/h.TVTzZg2?tk=eAvn3w5fPRE" rel="external" target="_self">https://m.tb.cn/h.TVTzZg2?tk=eAvn3w5fPRE</a> MF1643 「这是我的闲鱼号，快来看看吧～」
 点击链接直接打开</p>
-<p><a href="#R-image-9e6cab38b69d1cf8d5f0513b20191b32" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/8EDE0AC1B382FAC66C5DD0BA2DB28F1A-462x1024.jpg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-9e6cab38b69d1cf8d5f0513b20191b32"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/8EDE0AC1B382FAC66C5DD0BA2DB28F1A-462x1024.jpg"></a></p>
+<p><a href="#R-image-2929e1c0d9a3f21353cf769926969699" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/8EDE0AC1B382FAC66C5DD0BA2DB28F1A-462x1024.jpg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-2929e1c0d9a3f21353cf769926969699"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/8EDE0AC1B382FAC66C5DD0BA2DB28F1A-462x1024.jpg"></a></p>
 <p>QQ群</p>
-<p><a href="#R-image-fd3e97f52783d742a737c87e526de008" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/qrcode_1733795762228-574x1024.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-fd3e97f52783d742a737c87e526de008"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/qrcode_1733795762228-574x1024.png"></a></p>
+<p><a href="#R-image-c1c600567c09eff068d5afad67a82c93" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/qrcode_1733795762228-574x1024.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-c1c600567c09eff068d5afad67a82c93"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/qrcode_1733795762228-574x1024.png"></a></p>
 
 <script
   id="utteranc"
@@ -250,13 +249,13 @@ HA盒子，找我就行，包您满意，诚信经营。
         <script>
           var contentLangs=['en', 'zh'];
         </script>
-        <script src="../js/auto-complete.js?1734687493" defer></script>
-        <script src="../js/lunr/lunr.min.js?1734687493" defer></script>
-        <script src="../js/lunr/lunr.stemmer.support.min.js?1734687493" defer></script>
-        <script src="../js/lunr/lunr.multi.min.js?1734687493" defer></script>
-        <script src="../js/lunr/lunr.en.min.js?1734687493" defer></script>
-        <script src="../js/lunr/lunr.zh.min.js?1734687493" defer></script>
-        <script src="../js/search.js?1734687493" defer></script>
+        <script src="../js/auto-complete.js?1734743189" defer></script>
+        <script src="../js/lunr/lunr.min.js?1734743189" defer></script>
+        <script src="../js/lunr/lunr.stemmer.support.min.js?1734743189" defer></script>
+        <script src="../js/lunr/lunr.multi.min.js?1734743189" defer></script>
+        <script src="../js/lunr/lunr.en.min.js?1734743189" defer></script>
+        <script src="../js/lunr/lunr.zh.min.js?1734743189" defer></script>
+        <script src="../js/search.js?1734743189" defer></script>
       </div>
       <div id="R-homelinks" class="default-animation">
         <hr class="padding">
@@ -350,9 +349,9 @@ HA盒子，找我就行，包您满意，诚信经营。
       </div>
     </aside>
 
-    <script src="../js/clipboard.min.js?1734687493" defer></script>
-    <script src="../js/perfect-scrollbar.min.js?1734687493" defer></script>
-    <script src="../js/theme.js?1734687493" defer></script>
+    <script src="../js/clipboard.min.js?1734743189" defer></script>
+    <script src="../js/perfect-scrollbar.min.js?1734743189" defer></script>
+    <script src="../js/theme.js?1734743189" defer></script>
 
 
   </body>
