--- a/public/network/cloudflare-tunnel-ssh/index.html
+++ b/public/network/cloudflare-tunnel-ssh/index.html
@@ -35,17 +35,17 @@ HTTP HTTPS UNIX TCP SSH RDP UNIX&#43;TLS SMB HTTP_STATUS BASTION 前提条件：
     <link href="../../network/cloudflare-tunnel-ssh/index.xml" rel="alternate" type="application/rss+xml" title="Cloudflare tunnel配置ssh连接 :: HaBox 技术支持站">
     <link href="../../network/cloudflare-tunnel-ssh/index.print.html" rel="alternate" type="text/html" title="Cloudflare tunnel配置ssh连接 :: HaBox 技术支持站"><link rel="icon" href="../../images/favicon.png" type="image/png">
 
-    <link href="../../css/fontawesome-all.min.css?1734576343" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1734576343" rel="stylesheet"></noscript>
-    <link href="../../css/nucleus.css?1734576343" rel="stylesheet">
-    <link href="../../css/auto-complete.css?1734576343" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1734576343" rel="stylesheet"></noscript>
-    <link href="../../css/perfect-scrollbar.min.css?1734576343" rel="stylesheet">
-    <link href="../../css/fonts.css?1734576343" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1734576343" rel="stylesheet"></noscript>
-    <link href="../../css/theme.css?1734576343" rel="stylesheet">
-    <link href="../../css/theme-relearn-auto.css?1734576343" rel="stylesheet" id="R-variant-style">
-    <link href="../../css/chroma-relearn-auto.css?1734576343" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../../css/variant.css?1734576343" rel="stylesheet">
-    <link href="../../css/print.css?1734576343" rel="stylesheet" media="print">
-    <script src="../../js/variant.js?1734576343"></script>
+    <link href="../../css/fontawesome-all.min.css?1734743286" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1734743286" rel="stylesheet"></noscript>
+    <link href="../../css/nucleus.css?1734743286" rel="stylesheet">
+    <link href="../../css/auto-complete.css?1734743286" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1734743286" rel="stylesheet"></noscript>
+    <link href="../../css/perfect-scrollbar.min.css?1734743286" rel="stylesheet">
+    <link href="../../css/fonts.css?1734743286" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1734743286" rel="stylesheet"></noscript>
+    <link href="../../css/theme.css?1734743286" rel="stylesheet">
+    <link href="../../css/theme-relearn-auto.css?1734743286" rel="stylesheet" id="R-variant-style">
+    <link href="../../css/chroma-relearn-auto.css?1734743286" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../../css/variant.css?1734743286" rel="stylesheet">
+    <link href="../../css/print.css?1734743286" rel="stylesheet" media="print">
+    <script src="../../js/variant.js?1734743286"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..\/..';
@@ -96,7 +96,7 @@ HTTP HTTPS UNIX TCP SSH RDP UNIX&#43;TLS SMB HTTP_STATUS BASTION 前提条件：
             </div>
           </div>
           <ol class="topbar-breadcrumbs breadcrumbs highlightable" itemscope itemtype="http://schema.org/BreadcrumbList"><li
-            itemscope itemtype="https://schema.org/ListItem" itemprop="itemListElement"><a itemprop="item" href="../../network/index.html"><span itemprop="name">4 网络技术</span></a><meta itemprop="position" content="1">&nbsp;>&nbsp;</li><li
+            itemscope itemtype="https://schema.org/ListItem" itemprop="itemListElement"><a itemprop="item" href="../../network/index.html"><span itemprop="name">3 网络技术</span></a><meta itemprop="position" content="1">&nbsp;>&nbsp;</li><li
             itemscope itemtype="https://schema.org/ListItem" itemprop="itemListElement"><span itemprop="name">Cloudflare tunnel配置ssh连接</span><meta itemprop="position" content="2"></li>
           </ol>
           <div class="topbar-area topbar-area-end" data-area="end">
@@ -104,7 +104,7 @@ HTTP HTTPS UNIX TCP SSH RDP UNIX&#43;TLS SMB HTTP_STATUS BASTION 前提条件：
             </div>
             <div class="topbar-button topbar-button-print" data-content-empty="disable" data-width-s="area-more" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../../network/cloudflare-tunnel-ssh/index.print.html" title="打印整章 (CTRL&#43;ALT&#43;p)"><i class="fa-fw fas fa-print"></i></a>
             </div>
-            <div class="topbar-button topbar-button-prev" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../../network/index.html" title="4 网络技术 (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a>
+            <div class="topbar-button topbar-button-prev" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../../network/index.html" title="3 网络技术 (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a>
             </div>
             <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../../network/habox-over-greatwall/index.html" title="Ha盒子配置科学上网 (🡒)"><i class="fa-fw fas fa-chevron-right"></i></a>
             </div>
@@ -161,21 +161,21 @@ HTTP HTTPS UNIX TCP SSH RDP UNIX&#43;TLS SMB HTTP_STATUS BASTION 前提条件：
 <p>导航到<strong>Networks</strong> &gt; <strong>Tunnels</strong></p>
 <p>然后<strong>Create a tunnel</strong></p>
 <p>tunnel type就默认的cloudflare，然后next</p>
-<p><a href="#R-image-ee448c334f17c29b320874c747126073" class="lightbox-link"><img alt="image-20240928114211562" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20240928114211562.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-ee448c334f17c29b320874c747126073"><img alt="image-20240928114211562" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20240928114211562.png"></a></p>
+<p><a href="#R-image-3063f3bbf3013cd8c40b6c219d817c48" class="lightbox-link"><img alt="image-20240928114211562" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20240928114211562.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-3063f3bbf3013cd8c40b6c219d817c48"><img alt="image-20240928114211562" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20240928114211562.png"></a></p>
 <p>然后设置tunnel name,然后save tunnel</p>
 <h2 id="3-安装和配置cloudflared">3 安装和配置cloudflared</h2>
 <p>**Choose an operating system:**Debian</p>
 <p>**Choose an architecture:**arm64-bit</p>
-<p><a href="#R-image-7ae0bc4d80bb6eb38a71eba543bb98f1" class="lightbox-link"><img alt="image-20240928111438949" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20240928111438949.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-7ae0bc4d80bb6eb38a71eba543bb98f1"><img alt="image-20240928111438949" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20240928111438949.png"></a></p>
+<p><a href="#R-image-2e030be445f3e05de8a5661860314bfd" class="lightbox-link"><img alt="image-20240928111438949" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20240928111438949.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-2e030be445f3e05de8a5661860314bfd"><img alt="image-20240928111438949" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20240928111438949.png"></a></p>
 <p>安装完成后，点击右下角save</p>
 <h2 id="4-配置public-hostname">4 配置Public Hostname</h2>
 <p>再回到Tunnels列表，就可以看到刚才创建的Tunnel了，拉到右边有3个点，点它会弹出配置入口<strong>Configure</strong></p>
 <p>切换到<strong>Public Hostname</strong></p>
 <p>Add a public hostname</p>
-<p><a href="#R-image-84795d6b88c80acaabf0bbc6b42e71fc" class="lightbox-link"><img alt="image-20240928111738284" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20240928111738284.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-84795d6b88c80acaabf0bbc6b42e71fc"><img alt="image-20240928111738284" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20240928111738284.png"></a></p>
+<p><a href="#R-image-0dae5b9523288505c06b756cc6359ab9" class="lightbox-link"><img alt="image-20240928111738284" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20240928111738284.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-0dae5b9523288505c06b756cc6359ab9"><img alt="image-20240928111738284" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/image-20240928111738284.png"></a></p>
 <p>同样，在<strong>Public hostnames</strong>列表也是点右边的3个小点进入配置</p>
 <h2 id="5-设置private-network">5 设置Private Network</h2>
 <p>切换到<strong>Private Network</strong></p>
@@ -291,13 +291,13 @@ Are you sure you want to continue connecting (yes/no/[fingerprint])? </code></pr
         <script>
           var contentLangs=['en', 'zh'];
         </script>
-        <script src="../../js/auto-complete.js?1734576343" defer></script>
-        <script src="../../js/lunr/lunr.min.js?1734576343" defer></script>
-        <script src="../../js/lunr/lunr.stemmer.support.min.js?1734576343" defer></script>
-        <script src="../../js/lunr/lunr.multi.min.js?1734576343" defer></script>
-        <script src="../../js/lunr/lunr.en.min.js?1734576343" defer></script>
-        <script src="../../js/lunr/lunr.zh.min.js?1734576343" defer></script>
-        <script src="../../js/search.js?1734576343" defer></script>
+        <script src="../../js/auto-complete.js?1734743286" defer></script>
+        <script src="../../js/lunr/lunr.min.js?1734743286" defer></script>
+        <script src="../../js/lunr/lunr.stemmer.support.min.js?1734743286" defer></script>
+        <script src="../../js/lunr/lunr.multi.min.js?1734743286" defer></script>
+        <script src="../../js/lunr/lunr.en.min.js?1734743286" defer></script>
+        <script src="../../js/lunr/lunr.zh.min.js?1734743286" defer></script>
+        <script src="../../js/search.js?1734743286" defer></script>
       </div>
       <div id="R-homelinks" class="default-animation">
         <hr class="padding">
@@ -312,15 +312,15 @@ Are you sure you want to continue connecting (yes/no/[fingerprint])? </code></pr
           <li data-nav-id="/access/index.html" class=""><input type="checkbox" id="R-section-8a2548568bbc2b59f59b2efe93b2b97f" aria-controls="R-subsections-8a2548568bbc2b59f59b2efe93b2b97f"><label for="R-section-8a2548568bbc2b59f59b2efe93b2b97f"><i class="fa-fw fas fa-chevron-down"></i><i class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">子菜单2 设备接入</span></label><a class="padding" href="../../access/index.html">2 设备接入<i class="fa-fw fas fa-check read-icon"></i></a><ul id="R-subsections-8a2548568bbc2b59f59b2efe93b2b97f" class="morespace collapsible-menu">
           <li data-nav-id="/access/homekit/index.html" class=""><a class="padding" href="../../access/homekit/index.html">HA Box桥接米家设备到HomeKit<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/access/mijia/index.html" class=""><a class="padding" href="../../access/mijia/index.html">将米家设备接入HomeAssistant<i class="fa-fw fas fa-check read-icon"></i></a></li></ul></li>
-          <li data-nav-id="/automatic-control/index.html" class=""><a class="padding" href="../../automatic-control/index.html">3 智能控制<i class="fa-fw fas fa-check read-icon"></i></a></li>
-          <li data-nav-id="/network/index.html" class="parent "><input type="checkbox" id="R-section-30d33bf08e663016953c1238fd6c9aad" aria-controls="R-subsections-30d33bf08e663016953c1238fd6c9aad" checked><label for="R-section-30d33bf08e663016953c1238fd6c9aad"><i class="fa-fw fas fa-chevron-down"></i><i class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">子菜单4 网络技术</span></label><a class="padding" href="../../network/index.html">4 网络技术<i class="fa-fw fas fa-check read-icon"></i></a><ul id="R-subsections-30d33bf08e663016953c1238fd6c9aad" class="morespace collapsible-menu">
+          <li data-nav-id="/network/index.html" class="parent "><input type="checkbox" id="R-section-30d33bf08e663016953c1238fd6c9aad" aria-controls="R-subsections-30d33bf08e663016953c1238fd6c9aad" checked><label for="R-section-30d33bf08e663016953c1238fd6c9aad"><i class="fa-fw fas fa-chevron-down"></i><i class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">子菜单3 网络技术</span></label><a class="padding" href="../../network/index.html">3 网络技术<i class="fa-fw fas fa-check read-icon"></i></a><ul id="R-subsections-30d33bf08e663016953c1238fd6c9aad" class="morespace collapsible-menu">
           <li data-nav-id="/network/cloudflare-tunnel-ssh/index.html" class="active"><a class="padding" href="../../network/cloudflare-tunnel-ssh/index.html">Cloudflare tunnel配置ssh连接<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/network/habox-over-greatwall/index.html" class=""><a class="padding" href="../../network/habox-over-greatwall/index.html">Ha盒子配置科学上网<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/network/linux-partition/index.html" class=""><a class="padding" href="../../network/linux-partition/index.html">linux下无损扩容分区方法<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/network/docker-pull/index.html" class=""><a class="padding" href="../../network/docker-pull/index.html">从 Docker Hub 快速拉取镜像<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/network/free-vless-node/index.html" class=""><a class="padding" href="../../network/free-vless-node/index.html">搭建免费科学上网节点<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/network/free-remote-control/index.html" class=""><a class="padding" href="../../network/free-remote-control/index.html">远程控制Homeassistant盒子<i class="fa-fw fas fa-check read-icon"></i></a></li></ul></li>
-          <li data-nav-id="/video/index.html" class=""><a class="padding" href="../../video/index.html">5 视频教程<i class="fa-fw fas fa-check read-icon"></i></a></li>
+          <li data-nav-id="/faq/index.html" class=""><a class="padding" href="../../faq/index.html">4 常见问题<i class="fa-fw fas fa-check read-icon"></i></a></li>
+          <li data-nav-id="/about/index.html" class=""><a class="padding" href="../../about/index.html">5 关于我们<i class="fa-fw fas fa-check read-icon"></i></a></li>
           </ul>
         </div>
         <div class="padding footermargin footerLangSwitch footerVariantSwitch footerVisitedLinks footerFooter showVariantSwitch showVisitedLinks showFooter"></div>
@@ -391,13 +391,12 @@ Are you sure you want to continue connecting (yes/no/[fingerprint])? </code></pr
       </div>
     </aside>
 
-    <script src="../../js/clipboard.min.js?1734576343" defer></script>
-    <script src="../../js/perfect-scrollbar.min.js?1734576343" defer></script>
-    <script src="../../js/theme.js?1734576343" defer></script>
+    <script src="../../js/clipboard.min.js?1734743286" defer></script>
+    <script src="../../js/perfect-scrollbar.min.js?1734743286" defer></script>
+    <script src="../../js/theme.js?1734743286" defer></script>
 
 
   </body>
 </html>
-
 
 
